--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -1,22 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle annonce{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
 
 <div class="container">
     <section class="col-md-7 bg-light shadow rounded container my-5 sectionForm">
-        <h2 class="py-4 px-5 text-center titreForm">Nouvelle annonce</h2>
+        <h2 class="py-4 px-5 text-center titreForm">Inscription</h2>
        {{ form_start(form)}}
     <div class="p-4">
         {{form_widget(form)}}
     </div>
     <div class="text-center">
-        <button type="submit" class="btn btn-primary m-4"> <i class="fas fa-check mr-2"></i> Validez votre annonce</button>
+        <button type="submit" class="btn btn-primary m-4"> <i class="fas fa-check mr-2"></i> Validez l'inscription</button>
     </div>
        
        {{form_end(form)}}
     <section>
 </div>
-
 {% endblock %}
