--- a/templates/changeAnnonce/edit.html.twig
+++ b/templates/changeAnnonce/edit.html.twig
@@ -5,14 +5,18 @@
 {% block body %}
 
 <div class="container">
-        
-        <h2 class="m-4 text-center">Modification de l'annonce</h2>
+    <section class="col-md-7 bg-light shadow rounded container my-5 sectionForm">
+        <h2 class="py-4 px-5 text-center titreForm">Modification de l'annonce</h2>
        {{ form_start(form)}}
-
-       {{form_widget(form)}}
-
-       <button type="submit" class="btn btn-primary"> Enregistrer les modifications</button>
-       {{form_end(form)}}
+    <div class="p-4">
+        {{form_widget(form)}}
     </div>
+    <div class="text-center">
+        <button type="submit" class="btn btn-primary m-4"><i class="fas fa-check mr-2"></i> Enregistrer les modifications</button>
+    </div>
+       
+       {{form_end(form)}}
+    <section>
+</div>
 
 {% endblock %}
