--- a/templates/changeAnnonce/show.html.twig
+++ b/templates/changeAnnonce/show.html.twig
@@ -5,17 +5,19 @@
 {% block body %}
 
 <div class="container text-center">
-        
-        <h2 class="m-4">Cet échange</h2>
-        <div class="row">
-                <div class="col-md-4">
-                    <div class="card bd-light mb-3">
-                        <div>
-                        <p>Mr X aimerais échanger {{change.montant}} {{ change.deviseA|capitalize}} contre des {{change.deviseB|capitalize}} dans la ville de {{ change.ville|capitalize }}</p>
-                        </div>
-                    </div>
-                </div>
-        </div>
+    <div class="row my-4">
+      {% set a = change %}
+            <div class="col-2">
+            </div>
+            <div class="col-3">
+                <img src="{{a.author.picture}}" class="img_profil" alt="Photo de profil de {{a.author.firstName}} - {{a.author.lastName}}">
+            </div>
+            <div class="col-4">
+              <h4>{{a.author.firstName}} {{a.author.lastName}}</h4><p> j'aimerais échanger {{change.montant}} {{ change.deviseA|capitalize}} contre des {{change.deviseB|capitalize}} dans la ville de {{ change.ville|capitalize }}</p>
+            </div>       
     </div>
+</div>
 
 {% endblock %}
+
+
