--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="mt-5 bg-light py-1 text-center">
+<footer class="foot">
     <p> Le bon change - imaginé par Nino - réalisé par <a href="www.linkedin.com/in/younes-boukobaa" target="_blank"> Younes Boukobaa</a> </p>
 </footer>
